--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "Julie-Mwol",
-    "description": "Julie Mwol is the Modified Version of WhatsAsena, Made By @farhan-dqz with Baileys.",
+    "description": "Julie Mwol is the Modified Version of WhatsAsena, Made By @DVT with Baileys.",
     "logo": "https://i.imgur.com/ADXSU8e.jpeg",
     "keywords": ["whatsapp", "userbot", "julie", "WhatsAsena", "mwol", "bot", "ai"],
     "repository": "https://github.com/farhan-dqz/Julie-Mwol",
